package exception;

public class SoldeInsuffisantException extends Exception {
    public SoldeInsuffisantException(String message) { super(message); }
}



