package strategy;

public interface CalculInteret {
    void appliquerInteret();
}